--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
       hibernate:
         format_sql: false
     defer-datasource-initialization: true
+  h2:
+    console:
+      enabled: false
   http:
     encoding:
       charset: UTF-8
